# job-trends.agent

./: .gitignore  README.md  annoy_st_index.ann  checkpoint.json  doc_mapping.json  indexing_docs.ipynb  kg_triples.json  knowledge_graph.ipynb  manage.py  pyproject.toml  requirements.txt  rlhf_feedback_log.jsonl  update_knowledge.py  web_search_cache.json
.github/workflows/: deploy.yml
.ipynb_checkpoints/: indexing_docs-checkpoint.ipynb
data/: rlhf_feedback_log.jsonl  web_search_cache.json
job_trends_agent/: asgi.py  settings.py  urls.py  wsgi.py
rag_app/: prompt.py  urls.py  views.py
rag_app/config/: __init__.py  settings_loader.py
rag_app/services/: crawler.py  evaluation.py  update_knowledge.py  web_searcher.py
rag_app/static/css/: styles.css
rag_app/static/js/: scripts.js
rag_app/templates/: index.html
rag_app/utils/: chunking.py  handle_image.py  is_web_search.py  pdf_to_image.py  update_knowledge.py
rag_app/views/: chat_page.py  get_response.py  log_feedback.py  upload_file.py
